tests/semantic/fact_arity/fact_arity.dl
// Souffle - A Datalog Compiler
// Copyright (c) 2020, The Souffle Developers. All rights reserved
// Licensed under the Universal Permissive License v 1.0 as shown at:
// - https://opensource.org/licenses/UPL
// - <souffle root>/licenses/SOUFFLE-UPL.txt

// Check mismatching arity in facts
.type N <: symbol

.decl A (x:N, y:N, z:N)
.decl B (x:N)

A("1").
A("2","3").
A("2","3","1").

B("3").
B("3","4").
B("3","4","3").
